# Sigillum

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: main.ts  styles.css  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  pdf_utils.rs
