[package]
name = "sigillum"
version = "0.1.0"
description = "A PDF digital signature app with watermarking"
authors = ["William"]
edition = "2021"

[lib]
name = "sigillum_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# PDF manipulation
lopdf = "0.34"

# Cryptography
rsa = { version = "0.9", features = ["pem", "sha2"] }
sha2 = "0.10"
digest = "0.10"
rand = "0.8"
base64 = "0.22"
hex = "0.4"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2"
anyhow = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }
